# ToDoList

./: .gitignore  README.md  alembic.ini  config.py  doc.txt  docker-compose.yml  example.env  main.py  managers.py  menu_manager.py  models.py  pyproject.toml
Logic/: base_manager.py  project_manager.py  task_manager.py
Ui/: main_menu.py  project_menu.py  task_menu.py
api_cli/api/: routers.py
api_cli/cli/: fetcher.py
api_cli/gateway/: entity_gateway.py  project_gateway.py  task_gateway.py
app/: main.py
app/cli/: base_menu.py  entity_menu.py  main_menu.py  project_menu.py  task_menu.py
app/exceptions/: __init__.py  entity.py
app/models/: models.py
app/services/: base_service.py  entity_service.py  project_service.py  task_service.py
bootstrap/: bootstrap.py  runners.py
cli/: base_menu.py  entity_management.py  fetcher.py  main_menu.py  project_management.py  task_management.py
core/: config.py  validator.py
db/: db.py  db_inmemory.py  db_interface.py  db_postgres.py  orm_models.py  session.py
exception/: exceptions.py
exceptions/: raisor.py  validator.py
managers/: base_manager.py  project_manager.py  task_manager.py
menus/: base_menu.py  main_menu.py  project_menu.py  task_menu.py
models/: models.py
repository/: entity_repository.py  project_repository.py  task_repository.py
service/: base_manager.py  entity_manager.py  project_manager.py  task_manager.py  validators.py
tests/: test_project_creation.py  test_project_deletion.py  test_project_editing.py  test_task_creation.py  test_task_deletion.py  test_task_editing.py
(+85 files in other folders)
