[project]
name = "todolist1"
version = "0.1.0"
description = "A ToDo List Project"
authors = [
    {name = "Amk1400",email = "kavoshamirmohammad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
